deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-crm-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-crm
  template:
    metadata:
      labels:
        app: demo-crm
    spec:
      containers:
        - name: demo-crm
          image: pwstaging/demo-crm:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
