service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-crm-service
spec:
  ports:
    - port: 8089
      targetPort: 3000
  selector:
    app: demo-crm
