ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: hodesay.bounceme.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-crm-service
            port:
              number: 8089
